# hcltest

./: .gitignore  .travis.yml  README.md  Setup.hs  hcltest.cabal  project.config
src/Test/: HClTest.hs
src/Test/HClTest/: Driver.hs  Monad.hs  Program.hs  Setup.hs  Test.hs  Trace.hs
src/Test/Tasty/: HClTest.hs
tests/: doctests.hsc
travis/: github.sh  script.sh
