cabal-version: 2.0
name: hcltest
version: 0.3.7
build-type: Custom
license-file: LICENSE
copyright: Copyright (C) 2013-2015 Benno Fünfstück
maintainer: Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability: experimental
homepage: http://github.com/bennofs/hcltest/
bug-reports: http://github.com/bennofs/hcltest/issues
synopsis: A testing library for command line applications.
description:
    Allows to write tests for command line applications using haskell.
category: Testing
author: Benno Fünfstück
extra-source-files:
    .ghci
    .gitignore
    .travis.yml
    README.md

source-repository head
    type: git
    location: git://github.com/bennofs/hcltest.git

custom-setup
    setup-depends:
        base,
        text,
        Cabal,
        filepath,
        pretty,
        directory

library
    exposed-modules:
        Test.HClTest
        Test.HClTest.Program
        Test.HClTest.Monad
        Test.HClTest.Setup
        Test.HClTest.Trace
        Test.Tasty.HClTest
    build-depends:
        base >=4.5.1.0 && <4.17,
        bytestring >=0.9.2.1 && <0.12,
        text >=0.11.2.3 && <1.3,
        free >=4.5 && <5.2,
        process >=1.1.0.1 && <1.7,
        filepath >=1.3.0.0 && <1.5,
        transformers >=0.3.0.0 && <0.6,
        either >=4.1.1 && <5.1,
        directory >=1.1.0.2 && <1.4,
        dlist >=0.6.0.1 && <1.1,
        temporary >=1.2.0.1 && <1.4,
        mtl >=2.1.2 && <2.3,
        lens >=4.0.7 && <5.2,
        tasty >=0.8.0.2 && <1.5,
        tagged >=0.7.1 && <0.9,
        mmorph >=1.0.2 && <1.2,
        random-shuffle >=0.0.4 && <0.1,
        split >=0.2.1.1 && <0.3,
        stm >=2.4 && <2.6,
        optparse-applicative >=0.7.0.2 && <0.17,
        monad-control >=1 && <1.1,
        transformers-base >=0.4.1 && <0.5
    default-language: Haskell2010
    other-extensions: TemplateHaskell
    hs-source-dirs: src
    ghc-options: -Wall

test-suite doctests
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    build-depends:
        base >=4.5.1.0 && <4.17,
        doctest >=0.9.10.2 && <0.21
    default-language: Haskell2010
    other-extensions: TemplateHaskell
    hs-source-dirs: tests
    ghc-options: -Wall -threaded
